syntax = "proto3";

package client.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "shared_entity.proto";

option go_package = "go.analyticon.eu/firefly/backend-client/pkg/measurement/interface/grpc/generated";
option csharp_namespace = "Analyticon.Elemental.FenXT";

enum NameType {
  NAME_TYPE_UNSPECIFIED = 0;
  NAME_TYPE_MATERIAL_NUMBER = 1;
  NAME_TYPE_SHORT_NAME = 2;
  NAME_TYPE_COMPANY_NAME = 3;
  NAME_TYPE_OLD_NAME = 4;
  NAME_TYPE_OTHER_NAME = 5;
}

enum Sorting {
  SORTING_UNSPECIFIED = 0;
  SORTING_ASC = 1;
  SORTING_DESC = 2;
}

enum TypeFilter {
  TYPE_FILTER_UNSPECIFIED = 0;
  TYPE_FILTER_FACTORY = 1;
  TYPE_FILTER_CUSTOMER = 2;
}

message MaterialName {
  string name = 1;
  NameType type = 2;
}

message Specification {
  string name = 1;
  Range range = 2;
  Range hidden_range = 3;
  double weight = 4;
}

message Material {
  string uuid = 1;
  MaterialName default_name = 2;
  MaterialName old_name = 3;
  MaterialName short_name = 4;
  repeated Specification specifications = 5;
  string base = 6;
  string remainder = 7;
  bool factory = 8;
  string country = 9;
  repeated MaterialName names = 10;
}

message Reference {
  oneof entity {
    MaterialGroupItem material = 1;
    MaterialGroup material_group = 2;
    MaterialGroupSet material_group_set = 3;
    ThresholdGroup threshold_group = 4;
  }
  string uuid = 5;
  string name = 6;
}

message MaterialOverrides {
  string display_name = 1;
}

message MaterialGroupItem {
  Material material = 2;
  MaterialOverrides material_overrides = 3;
}

message MaterialGroup {
  string uuid = 1;
  string name = 2;
  bool factory = 3;
  repeated MaterialGroupItem repository_items = 4;
}

message MaterialGroupSet {
  string uuid = 1;
  string name = 2;
  bool factory = 3;
  repeated MaterialGroup repository_items = 4;
}

message ThresholdGroup {
  string uuid = 1;
  string name = 2;
  bool factory = 3;
  repeated Threshold repository_items = 4;
}

message Threshold {
  Element element = 1;
  string threshold_group_uuid = 2;
  ThresholdType type = 4;
  repeated DimensionedQuantity thresholds = 5;
}

enum ThresholdType {
  THRESHOLD_TYPE_UNSPECIFIED = 0;
  THRESHOLD_TYPE_PASS_FAIL = 1;
  THRESHOLD_TYPE_PASS_INCONCLUSIVE = 2;
  THRESHOLD_TYPE_PASS_INCONCLUSIVE_FAIL = 3;
  THRESHOLD_TYPE_FAIL_PASS_FAIL = 4;
}

message Element {
  int32 atomic_number = 1;
  string symbol = 2;
}

message ThresholdGroupSet {
  string uuid = 1;
  string name = 2;
  bool factory = 3;
  repeated ThresholdGroup repository_items = 4;
}

message DataWorkflow {
  string uuid = 1;
  string name = 2;
  string schema = 3;
  bool activated = 4;
  bool factory = 5;
}

message Profile {
  string uuid = 1;
  string name = 2;
  bool activated = 3;
  bool factory = 4;
  Objective objective = 5;
  SubObjective selected_sub_objective = 6;
  Repository repository = 7;
  Reference reference = 8;
  ResultViewType start_view = 9;
  DetailResultsType detail_results_include = 10;
  repeated FrontendConditionTime conditions = 11;
  MeasureableEntity selected_matrix = 12;
  bool auto_detect_matrix = 13;
}

message MeasureableEntity {
  oneof entity  {
    Element element = 1;
    // PseudeElement, ...
  }
}

message FrontendConditionTime {
  FrontendCondition condition = 1;
  int32 time_seconds = 2;
  bool required = 3;
}

//message Conditions {
//  ConditionsType type = 1;
//  Base base = 2;
//  repeated Filter filters = 3;
//}

//message Base {
//  string name = 1;
//  Element element = 2;
//}
//message Filter {
//  string name = 1;
//  int32 duration = 2;
//}

enum ConditionsType {
  CONDITIONS_TYPE_UNSPECIFIED = 0;
  CONDITIONS_TYPE_ADAPTIVE = 1;
  CONDITIONS_TYPE_SPECIFIC = 2;
}

enum ResultViewType {
  RESULT_VIEW_TYPE_UNSPECIFIED = 0;
  RESULT_VIEW_TYPE_HIGH_LEVEL = 1;
  RESULT_VIEW_TYPE_DETAIL = 2;
}

enum DetailResultsType {
  DETAIL_RESULTS_TYPE_UNSPECIFIED = 0;
  DETAIL_RESULTS_TYPE_2SIGMA = 1;
  DETAIL_RESULTS_TYPE_SPECS = 2;
  DETAIL_RESULTS_TYPE_2SIGMA_SPECS = 3;
}

enum RepositoryType {
  REPOSITORY_TYPE_UNSPECIFIED = 0;
  REPOSITORY_TYPE_MATERIAL_GROUP = 1;
  REPOSITORY_TYPE_MATERIAL_GROUP_SET = 2;
  REPOSITORY_TYPE_THRESHOLD_GROUP = 3;
  REPOSITORY_TYPE_THRESHOLD_GROUP_SET = 4;
}

message Repository {
  string uuid = 5;
  string name = 6;
  oneof entity {
    MaterialGroup material_group = 1;
    MaterialGroupSet material_group_set = 2;
    ThresholdGroup threshold_group = 3;
    ThresholdGroupSet threshold_group_set = 4;
  }
}

message Objective {
  string uuid = 1;
  string name = 2;
  map<string, string> localized_names = 3;
  RepositoryType repository_type = 4;
  bool has_reference = 5;
  repeated DetailResultsType available_detail_results = 6;
  DetailResultsType default_detail_result = 7;
  repeated ResultViewType available_result_views = 8;
  ResultViewType default_result_view = 9;
  repeated SubObjectiveWithOptions sub_objectives = 10;
  SubObjective default_sub_objectives = 11;
  repeated MeasureableEntity matrices = 12;
  bool can_auto_detect_matrix = 13;
  repeated FrontendCondition condition_sequence = 14;
  repeated FrontendConditionTime default_condition_times_seconds = 15;
}

message SubObjectiveOptions {
  // nothing yet
}

message SubObjectiveWithOptions {
  SubObjective sub_objective = 1;
  SubObjectiveOptions options = 2;
}

enum SubObjective {
  SUB_OBJECTIVE_UNSPECIFIED = 0;
  SUB_OBJECTIVE_GENERAL = 1;
  SUB_OBJECTIVE_ADAPTIVE = 2;
  SUB_OBJECTIVE_SPECIFIC = 3;
}

enum FrontendCondition {
  FRONTEND_CONDITION_UNSPECIFIED = 0;
  FRONTEND_CONDITION_REQUIRED_1 = 1;
  FRONTEND_CONDITION_REQUIRED_2 = 2;
  FRONTEND_CONDITION_REQUIRED_3 = 3;
  FRONTEND_CONDITION_REQUIRED_4 = 4;
  FRONTEND_CONDITION_OPTIONAL_1 = 5;
  FRONTEND_CONDITION_OPTIONAL_2 = 6;
  FRONTEND_CONDITION_OPTIONAL_3 = 7;
  FRONTEND_CONDITION_OPTIONAL_4 = 8;
}

enum MeasurementType {
  MEASUREMENT_TYPE_UNSPECIFIED = 0;
  MEASUREMENT_TYPE_IDENTIFY = 1;
  MEASUREMENT_TYPE_VERIFY = 2;
}

message Reading {

  enum ValueDisplayType {
    VALUE_DISPLAY_TYPE_UNSPECIFIED = 0;
    VALUE_DISPLAY_TYPE_VALUE = 1;
    VALUE_DISPLAY_TYPE_BASE = 2;
    VALUE_DISPLAY_TYPE_LLOD = 3;
    VALUE_DISPLAY_TYPE_BRACKETED = 4;
    VALUE_DISPLAY_TYPE_NO_VALUE = 5;
  }

  enum CursorType{
    CURSOR_TYPE_UNSPECIFIED = 0;
    CURSOR_TYPE_LOWER = 1;
    CURSOR_TYPE_EXACT = 2;
    CURSOR_TYPE_HIGHER = 3;
  }


  enum SpecificationDisplayType {
    SPECIFICATION_DISPLAY_TYPE_TRAMP_UNSPECIFIED = 0;  // => ""
    SPECIFICATION_DISPLAY_TYPE_REMAINDER = 1;          // => "Rest"
    SPECIFICATION_DISPLAY_TYPE_NOT_SPECIFIED = 2;      // => "Not specified"
    SPECIFICATION_DISPLAY_TYPE_SHOW_SPECIFICATION = 3; // => ""
  }

  message RangeResult{
    double min = 1;
    double max = 2;
    double cursor_position = 3;
    ResultType result_type = 4;
    CursorType cursor_type = 5;
  }


  message ThresholdResult{
    message ThresholdResultItem{
      double boundary = 1;
      bool match = 2;
      ResultType result_type = 3;
    }

    repeated ThresholdResultItem threshold_result_items = 1;
    ResultType result_type = 3;
    ThresholdType threshold_type = 2;
  }

  message PartialResult {
    string name = 1;
    double value = 2;
    ValueDisplayType value_display_type = 3;
    double std_dev = 4;
    Unit unit = 5;
    RangeResult range = 6;
    ThresholdResult threshold = 7;
    SpecificationDisplayType specification_display_type = 8;
  }

  message Match {
    ResultType result_type = 1;
    string name = 2;
    string group_name = 3;
    repeated PartialResult results = 4;
    bool reference_match = 5;
    string uuid = 6;
    string group_uuid = 7;
  }

  string base = 1;
  google.protobuf.Duration duration = 2;
  repeated Match matches = 3;
  Match reference_match = 4;
};

message MeasurementSettings {
  Profile profile = 3;
}

message ExportMeasurement {


  message Range {
    double minimum = 1;
    double maximum = 2;
    Unit unit = 3;
  }

  message Specification {
    string name = 1;
    Range range = 2;
    Range hidden_range = 3;
    double weight = 4;
  }

  message Material {
    string uuid = 1;
    MaterialName default_name = 2;
    MaterialName old_name = 3;
    MaterialName short_name = 4;
    repeated Specification specifications = 5;
    string base = 6;
    string remainder = 7;
    bool factory = 8;
    string country = 9;
    repeated MaterialName names = 10;
  }

  message ThresholdResult{
    RawResult   result = 1;
    Threshold   threshold = 2;
    string        test_result = 3;
    int32        sector_index = 4;
  }

  message PeakResult {
    string name = 1;
    string condition_name = 2;
    string evaluated_line_group = 3;
    double peak_area = 4;
    double peak_stddev = 5;
    double background_area = 6;
    double background_stddev = 7;
    Unit   unit = 8;
    double chi_squared = 9;
  }

  message Filter {
    map<string, double> composition = 1;
	double              densitygcm3 = 2;
    uint32              thickness = 3;
  }

  message Spectrum {
    string run_uuid = 1;
    string condition_name = 2;
    repeated uint32 data = 3 [packed=true];
    double zero_channel_ev = 4;
    double ev_per_channel = 5;
    google.protobuf.Timestamp time_stamp = 6;
    google.protobuf.Duration real_time = 7;
    google.protobuf.Duration live_time = 8;
    google.protobuf.Duration shaping_time = 9;
	uint32 input_counts = 10;
	uint32 output_counts = 11;
	double input_count_rate = 12;
	double output_count_rate = 13;
	double source_ukv = 14;
	double source_iua = 15;
	repeated Filter filters = 16;
    double dead_time_percent = 17;
  }

  message RawResult {
    string name = 1;
    string condition_name = 2;
    string result_source = 3;
    double value = 4;
    double std_dev = 5;
    Unit unit = 6;
    repeated PeakResult peak_results = 7;
  }

  message MaterialOverrides {
    string display_name = 1;
  }

  message MaterialGroupItem {
    string material_uuid = 1;
    string material_group_uuid = 2;
    Material material = 3;
    MaterialOverrides material_overrides = 4;
    int32 index = 5;
  }

  message MaterialMatch {
    string uuid = 1;
    MaterialGroupItem material_group_item = 2;
    double quality = 3;
    string match_result = 4;
    repeated RawResult corrected_results = 5;
  }

  message MaterialGroup {
    string uuid = 1;
    string name = 2;
    bool factory = 3;
    repeated MaterialGroupItem repository_items = 4;
  }

  message MaterialGroupMatch {
    string uuid = 1;
    MaterialGroup material_group = 2;
    repeated MaterialMatch material_matches = 3;
    double quality = 4;
    string match_result = 5;
  }

  message ThresholdGroupResult {
    string uuid = 1;
    string threshold_group_uuid = 2;
    ThresholdGroup threshold_group = 3;
    repeated ThresholdResult threshold_result = 4;
    string group_result = 5;
  }

  message Reading {

	repeated Spectrum spectra = 1;
    repeated RawResult raw_results = 2;
    string verify_material_match_result = 3;
    MaterialMatch to_verify_material_match = 4;
    repeated MaterialMatch material_matches = 5;

    string verify_material_group_result = 6;
    MaterialGroupMatch to_verify_material_group_match = 7;
    repeated MaterialGroupMatch material_group_matches = 8;

    string verify_threshold_group_result = 9;
    ThresholdGroupResult to_verify_threshold_group_result = 10;
    repeated ThresholdGroupResult threshold_group_results = 11;
  }

  int32 measurement_number = 1;
  string uuid = 2;
  google.protobuf.Timestamp modified_at = 3;
  Reading reading = 4;
  MetaData meta_data = 5;
  MeasurementType measurement_type = 6;
  ResultInfo result_info = 7;
  Profile profile = 8;
};

enum ResultType {
  RESULT_TYPE_UNCERTAIN_UNSPECIFIED = 0;
  RESULT_TYPE_PASS = 1;
  RESULT_TYPE_FAIL = 2;
  RESULT_TYPE_NO_MATCH = 3;
}


message UserSettings {
  bool ready_to_measure = 1;
  DataWorkflow data_workflow = 2;
  Profile profile = 3;
  Reference reference = 4;
}

message AvailableMeasurementSettings {
  repeated DataWorkflow data_workflows = 1;
  repeated Profile profiles = 2;
}

message MetaData {
  string measurement_id = 1;
  bool is_valid = 2;
  string data = 3;
  bool is_faulty = 4;
  string faulty_description = 5;
  string user_name = 6;
  google.protobuf.Timestamp created_at = 7;
  string preferred_match_uuid = 8;
  string image = 9;
}

message MeasurementResult {
  string uuid = 1;
  MeasurementSettings settings = 2;
  bool completed = 3;
  ResultType result_type = 4;
  Reading reading = 5;
  MetaData meta_data = 6;
  MeasurementType measurement_type = 7;
  ResultInfo result_info = 8;
  int32 measurement_number = 9;
}

message ResultInfo {
  enum ResultInfoType {
    RESULT_INFO_TYPE_UNSPECIFIED = 0;
    RESULT_INFO_TYPE_ERROR = 1;
    RESULT_INFO_TYPE_SUCCESS = 2;
  }

  enum StopReason {
    STOP_REASON_UNSPECIFIED = 0;
    STOP_REASON_USER_STOPPED = 1;
    STOP_REASON_SYSTEM_STATE = 2;
    STOP_REASON_STRATEGY_COMPLETE = 3;
    STOP_REASON_STRATEGY_SUCCESS = 4;
    STOP_REASON_STRATEGY_FAILURE = 5;
    STOP_REASON_NO_SAMPLE_DETECTED = 6;
    STOP_REASON_HARDWARE_ERROR = 7;
    STOP_REASON_CONFIGURATION_ERROR = 8;
    STOP_REASON_MATRIX_DETECTION_FAILED = 9;
    STOP_REASON_MATRIX_NOT_CALIBRATED = 10;
    STOP_REASON_STRATEGY_RUNNING = 11;
    STOP_REASON_INTERNAL_ERROR = 12;
    STOP_REASON_XRAY_SOURCE_UNSTABLE = 13;
    STOP_REASON_WARNING_LIGHTS_ERROR = 14;
  }

  StopReason stop_reason = 1;
  ResultInfoType type = 2;
}

message MeasurementSummary {
  string user_name = 1;
  string profile_name = 2;
  string id = 3;
  string reference_name = 4;
  ResultType result_type = 5;
  int32 result_count = 6;
  bool faulty = 7;
  google.protobuf.Timestamp date = 8;
  MeasurementType measurement_type = 9;
  int32 measurement_number = 10;
}

message EnergyCalibrationResult {
  bool completed = 1;
  string status = 2;
}

enum MeasurementFlowAction {
  MEASUREMENT_FLOW_ACTION_UNSPECIFIED = 0;
  MEASUREMENT_FLOW_ACTION_ENTER = 1;
  MEASUREMENT_FLOW_ACTION_LEAVE = 2;
  MEASUREMENT_FLOW_ACTION_SKIP = 3;
}
